# the-crate

./: .env.example  .gitignore  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  SECURITY.md  SETUP.md  analyze.py  api.py  config.py  crate.py  database.py  discogs.py  docker-compose.yml  enrich.py  fingerprint.py  listener.py  mcp_server.py  pyproject.toml  recorder.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ab_tests/: benchmark_key.py  key_ground_truth.csv  test_analysis.py  test_api.py  test_artists.py  test_assistant.py  test_discogs.py  test_kb.py  test_live_tracklist.py  test_scoring.py
assistant/: agent.py  embed_text.py  kb.py  models.py  ollama_client.py  profile.py  recheck.py  scope.py  tools.py  vinyl_stores.py  web_sources.py  webutil.py
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md
scripts/: verify.py
web/: chat.js  crate-new.html  crate.html  crates.html  discogs.html  keycol.js  knowledge.html  listen.html  player.js  record.html  session.html  sessions.html  theme.css  ui.js  util.js
